--- a/splash.html
+++ b/splash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stratos Splash Title Screen</title>
+    <title>Stratos</title>
     <link rel="stylesheet" href="splash.css" />
 </head>
 <body>
