--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                     </button>
                 </div>
                 <div>
-                    <button cut title="Cut"> 
+                    <button cut title="Cut" disabled> 
                         <img src="assets/cut.svg" alt="Cut" /> 
                     </button>
-                    <button copy title="Copy"> 
+                    <button copy title="Copy" disabled> 
                         <img src="assets/copy.svg" alt="Copy" /> 
                     </button>
-                    <button paste title="Paste"> 
+                    <button paste title="Paste" disabled> 
                         <img src="assets/paste.svg" alt="Paste" /> 
                     </button>
                 </div>
                 <div>
-                    <button undo title="Undo changes"> 
+                    <button undo title="Undo changes" disabled> 
                         <img src="assets/undo.svg" alt="Undo" /> 
                     </button>
-                    <button redo title="Redo changes"> 
+                    <button redo title="Redo changes" disabled> 
                         <img src="assets/redo.svg" alt="Redo" /> 
                     </button>
                 </div>
@@ -53,16 +53,16 @@
                     </button>
                 </div>
                 <div>
-                    <button save-as title="Save as..."> 
+                    <button save-as title="Save as..." disabled> 
                         <img src="assets/save-as.svg" alt="Save as..." /> 
                     </button>
-                    <button save title="Save file"> 
+                    <button save title="Save file" disabled> 
                         <img src="assets/save.svg" alt="Save" /> 
                     </button>
-                    <button compile title="Compile file"> 
+                    <button compile title="Compile file" disabled> 
                         <img src="assets/compile.svg" alt="Compile" /> 
                     </button>
-                    <button execute title="Execute file"> 
+                    <button execute title="Execute file" disabled> 
                         <img src="assets/execute.svg" alt="Execute" /> 
                     </button>
                 </div>
