--- a/splash.html
+++ b/splash.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="splash.css" />
 </head>
 <body>
-    <img src="assets/splash.svg" alt="Stratos splash title screen" />
+    <img src="assets/fnames.svg" alt="Stratos splash title screen" />
 </body>
 </html>
