--- a/splash.html
+++ b/splash.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,22 @@
 </head>
 <body>
     <img src="assets/fnames.svg" alt="Stratos splash title screen" />
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stratos</title>
+    <link rel="stylesheet" href="splash.css" />
+</head>
+<body>
+    <div id="splash-container">
+        <img id="splash-image" src="assets/fnames.svg" alt="Stratos splash title screen" />
+        <br>
+        <img id="loading-gif" src="./assets/loading 3.gif" alt="Loading..." />
+    </div>
 </body>
 </html>
