--- a/splash.html
+++ b/splash.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="splash-container">
-        <img id="splash-image" src="assets/fnames.svg" alt="Stratos splash title screen" />
+        <img id="splash-image" src="assets/splash.svg" alt="Stratos splash title screen" />
         <br>
         <img id="loading-gif" src="./assets/loading 3.gif" alt="Loading..." />
     </div>
